--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -10,8 +10,9 @@
   }
 
   @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
+    /* @include span(10 of 12 last); */
+    @include span(12 of 12 last);
+    /* @include prefix(0.5 of 12); */
   }
 
   a {
@@ -91,15 +92,18 @@
 
 .list__item {
   @include breakpoint($medium) {
-    padding-right: $right-sidebar-width-narrow;
+    /* padding-right: $right-sidebar-width-narrow; */
+    padding-right: 0;
   }
 
   @include breakpoint($large) {
-    padding-right: $right-sidebar-width;
+    /* padding-right: $right-sidebar-width; */
+    padding-right: 0;
   }
 
   @include breakpoint($x-large) {
-    padding-right: $right-sidebar-width-wide;
+    /* padding-right: $right-sidebar-width-wide; */
+    padding-right: 0;
   }
 
   .page__meta {
